Fix for spacing in reviews

--- a/CSS/Reviews/Article.css
+++ b/CSS/Reviews/Article.css
@@ -78,3 +78,7 @@ ul {
     height: 40%;
     margin-right: 2rem;
 }
+
+p {
+    margin: 1rem 0;
+}
